# flicknote-cli

./: .gitignore  .prototools  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  RULE.md  SKILL.md  deny.toml  dist-workspace.toml  flake.nix  lefthook.yml  osv-scanner.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.forgejo/workflows/: ci.yml
.githooks/: pre-commit
.github/workflows/: ci.yaml  pr.yaml  pr.yml  release.yaml  release.yml
.lefthook/: lefthook.yml
.moon/: toolchains.yml  workspace.yml
.moon/tasks/: tag-rust.yml
.qlty/: qlty.toml
.sqlx/: query-20c61c8abf6cab86f2c4aa35fc8ddaa329946a5c8b4e8b19fc5e6daad899ee35.json  query-25ce542153e4221355996d86b28c80e48c87f76ae80c0aa8e6d4498467a1e919.json  query-30ed0fd6fc6bf71bab1bd74c902e965f6c6bd544ef0b6c18edc0d1f6e5a6127c.json  query-390b0befdb942f71c0559d1f9d0f9fc863edb4506c048fc0c691d327d45e94d6.json  query-430cb47c5f7452deaf2c99952c71339ae2cec1048fb171b1e84d5b2c51292f35.json  query-43926e656a397dd279d6982a2a4cdf40ccead74ee22c3d8fd4b1a43bc9375d2e.json  query-44ea3c047064b2ade99173cba8963293fe0445d243aacdc162c552ad7beddbcc.json  query-4b4fe16448073a7d042fa5f37c47f51e11555b4197584e301cb690e6fbc8326f.json  query-57d96969a7ae9bd59e82c9defbf45b4ff13b6d219f1c32725ef29f7f0738a494.json  query-5ed6b0c2b04c2e639e76e9f79ba1e4e51f23e01f5e57cbe07582184624a7ef1b.json  query-609f28fd7b85d4166841e0de3cbead2669eaa90e2bc663b493eb83d61d5b22f0.json  query-62f4c6245f098a68fe9f2de912f3ab9ef42a5e85b403f8f821dc80e5c084c369.json  query-7443153016b2e0567652fdb1cc537e681c1dbeed63c419a20aa7f83c4ac33137.json  query-7a52e93de063c6638b3f9be0143c437e407f4d4f64d8e6c8db66984f1edec359.json  query-85233f520cf7707e24dc0e23b975ca7cc9dad15e728c3711ee9bcbd21b1ca5c5.json  query-8d574555cb3ef3a7201c3536ae0a35384fb683ec63422f516f3417f8d91c04b0.json  query-90bc742216766bda020d7264c7a3edfe6b1dd9bea60442252753c4b566553701.json  query-97cd88b5ab275d16b5bb622e8f3a1aa8ec022ccd3811bb1d03c985bf729369c8.json  query-9edcfcf09fac22f3efd47bd1ab79366bd9aa6a49c34e9f54c67dfeae055b97a9.json  query-d51bd3d4872e0aee38cd7f8892d90894a04a0b5515264e7f5da087dcf268f6ef.json
.woodpecker/: build.yaml  pr-check.yaml
dagger/: dagger.json  go.mod  main.go
docs/: license-audit.md
flicknote-auth/: Cargo.toml  moon.yml
flicknote-auth/src/: client.rs  lib.rs  oauth.rs  pkce.rs  session.rs
flicknote-cli/: Cargo.toml  moon.yml
flicknote-cli/src/: api_client.rs  editable_document.rs  frontmatter.rs  main.rs  markdown.rs  utils.rs
flicknote-cli/src/commands/: add.rs  api.rs  append.rs  archive.rs  clip.rs  content.rs  count.rs  daemon.rs  delete.rs  detail.rs  edit.rs  edit_match.rs  find.rs  get.rs  import.rs  insert.rs  keyterm.rs  link.rs  list.rs  login.rs  logout.rs  mod.rs  modify.rs  open.rs  project.rs  prompt.rs  remove.rs  rename.rs  replace.rs  restore.rs  skill.rs  sync.rs  tui.rs  unarchive.rs  upload.rs  upload_util.rs  util.rs
flicknote-cli/src/help/: add.md  content.md  detail.md  find.md  keyterm.md  list.md  modify.md  project.md  prompt.md  replace.md  root.md  upload.md
flicknote-cli/src/tui/: app.rs  markdown.rs  mod.rs  ui.rs
flicknote-core/: Cargo.toml  moon.yml
flicknote-core/src/: backend.rs  config.rs  db.rs  error.rs  hooks.rs  lib.rs  pg.rs  pgwire.rs  postgrest.rs  schema.rs  session.rs  types.rs
flicknote-core/src/pgwire/: convert.rs  iden.rs  mod.rs  row.rs
flicknote-sync/: Cargo.toml  moon.yml
flicknote-sync/src/: http_adapter.rs  ipc.rs  lib.rs  main.rs
flicknote-tui/: client.go  detail.go  go.mod  go.sum  list.go  main.go  model.go  search.go  styles.go  types.go
flicktask-cli/: Cargo.toml
flicktask-cli/src/: config.rs  display.rs  hooks.rs  ids.rs  main.rs  position.rs  task_tree.rs  tw_json.rs
flicktask-cli/src/commands/: add.rs  annotate.rs  delete.rs  done.rs  edit.rs  export.rs  find.rs  get.rs  import.rs  list.rs  mod.rs  move_task.rs  plan.rs  start.rs  stop.rs  tag.rs  today.rs  tree.rs  undo.rs  untag.rs
scripts/: deploy-flicknote.sh  sqlx-postgres-schema.sql  sqlx-prepare.sh  sqlx-sqlite-schema.sql
skills/: flicknote.md  flicktask.md
