[workspace]
members = [
    "flicknote-core",
    "flicknote-auth",
    "flicknote-cli",
    "flicknote-sync",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
powersync = { path = "vendor/powersync", features = ["tokio", "reqwest"] }
postgres = { version = "0.19", features = ["with-serde_json-1"] }
base64 = "0.22"
rusqlite = { version = "0.38", features = ["load_extension", "bundled", "fallible_uint"] }
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
futures-lite = "2"
anyhow = "1"
toml = "0.8"
dirs = "6"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Error swallowing prevention
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"

# Prevent debug artifacts in production
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Useful pedantic subset (low noise, high value)
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
use_self = "warn"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "guionai/homebrew-tap"
# Whether to install an updater program
install-updater = false
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Which actions to run on pull requests
pr-run-mode = "plan"

[workspace.metadata.dist.dependencies.apt]
libclang-dev = "*"
musl-tools = "*"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
