[workspace]
members = [
    "flicknote-core",
    "flicknote-auth",
    "flicknote-cli",
    "flicknote-sync",
]
resolver = "3"

[workspace.package]
version = "0.1.4"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
powersync = { path = "vendor/powersync", features = ["tokio", "reqwest"] }
postgres = { version = "0.19", features = ["with-serde_json-1", "with-chrono-0_4", "with-uuid-1"] }
base64 = "0.22"
sea-query = { version = "1.0.0-rc.32", features = ["backend-postgres", "derive", "with-chrono", "with-uuid", "with-json", "postgres-array"] }
sea-query-postgres = { version = "0.6.0-rc.3", features = ["with-chrono", "with-uuid", "with-json"] }
rusqlite = { version = "0.38", features = ["load_extension", "bundled", "fallible_uint"] }
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
futures-lite = "2"
anyhow = "1"
toml = "0.8"
dirs = "6"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Error swallowing prevention
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"

# Prevent debug artifacts in production
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Useful pedantic subset (low noise, high value)
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
use_self = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
