[workspace]
members = [
    "flicknote-core",
    "flicknote-auth",
    "flicknote-cli",
    "flicknote-sync",
]
resolver = "3"

[workspace.package]
version = "0.2.4"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
publish = false
pre-release-commit-message = "chore: release {{version}}"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
powersync = { git = "https://github.com/GuionAI/powersync-native", tag = "v0.0.5-guion.1", features = ["tokio", "reqwest"] }
base64 = "0.22"
rusqlite = { version = "0.32", features = ["load_extension", "bundled"] }
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
futures-lite = "2"
anyhow = "1"
toml = "0.8"
dirs = "6"

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Error swallowing prevention
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"

# Prevent debug artifacts in production
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Useful pedantic subset (low noise, high value)
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
use_self = "warn"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
