[package]
name = "flicknote-auth"
version.workspace = true
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", default-features = false, features = ["json", "charset", "http2", "rustls"] }
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "macros", "rt", "io-util", "sync"] }
thiserror = { workspace = true }
url = "2"
urlencoding = "2"

[lints]
workspace = true
