[package]
name = "flicknote-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "flicknote"
path = "src/main.rs"

[features]
default = ["powersync", "storage-pgwire"]
powersync = ["flicknote-core/powersync"]
storage-pgwire = ["flicknote-core/storage-pgwire"]

[dependencies]
flicknote-core = { path = "../flicknote-core", default-features = false }
flicknote-auth = { path = "../flicknote-auth" }
clap = { version = "4", features = ["derive"] }
uuid = { workspace = true }
chrono = "0.4"
url = "2"
serde_json = { workspace = true }
tokio = { workspace = true }
libc = "0.2"
dirs = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "charset", "http2", "rustls-tls"] }
mime_guess = "2"
futures-util = "0.3"
serde = { workspace = true }
pulldown-cmark = { version = "0.13.1", default-features = false }
sha2 = "0.10"
open = "5"
tempfile = "3"

[dev-dependencies]

[lints]
workspace = true
