[package]
name = "flicknote-cli"
version.workspace = true
edition = "2024"
description = "Local-first note management CLI with cloud sync"
homepage = "https://github.com/guionai/flicknote-cli"
repository = "https://github.com/guionai/flicknote-cli"
license = "MIT"

[[bin]]
name = "flicknote"
path = "src/main.rs"

[[bin]]
name = "flicknote-sync"
path = "src/bin/flicknote-sync.rs"

[package.metadata.dist]
formula = "flicknote"

[features]
default = ["powersync", "storage-pgwire"]
powersync = ["flicknote-core/powersync"]
storage-pgwire = ["flicknote-core/storage-pgwire"]

[dependencies]
flicknote-core = { path = "../flicknote-core", default-features = false }
flicknote-auth = { path = "../flicknote-auth" }
flicknote-sync = { path = "../flicknote-sync" }
clap = { version = "4", features = ["derive"] }
uuid = { workspace = true }
chrono = "0.4"
url = "2"
serde_json = { workspace = true }
yaml_serde = "0.10"
tokio = { workspace = true }
libc = "0.2"
dirs = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "charset", "http2", "rustls-tls"] }
mime_guess = "2"
futures-util = "0.3"
serde = { workspace = true }
pulldown-cmark = { version = "0.13.1", default-features = false }
sha2 = "0.10"
open = "5"
tempfile = "3"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
async-trait = { workspace = true }

[lints]
workspace = true
