[package]
name = "flicknote-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["powersync"]
powersync = ["dep:powersync", "dep:rusqlite"]
storage-pgwire = ["dep:postgres", "dep:base64"]

[dependencies]
postgres = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
powersync = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
flicknote-auth = { path = "../flicknote-auth" }
dirs = { workspace = true }
chrono = "0.4"
base64 = { workspace = true, optional = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
