[package]
name = "flicknote-core"
version.workspace = true
edition = "2024"

[features]
default = ["powersync"]
powersync = ["dep:powersync", "dep:rusqlite"]
storage-pgwire = ["dep:postgres", "dep:sea-query", "dep:sea-query-postgres"]

[dependencies]
postgres = { workspace = true, optional = true }
sea-query = { workspace = true, optional = true }
sea-query-postgres = { workspace = true, optional = true, features = ["postgres-array"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
powersync = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
flicknote-auth = { path = "../flicknote-auth" }
dirs = { workspace = true }
chrono = "0.4"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
