[package]
name = "flicknote-core"
version.workspace = true
edition = "2024"

[features]
default = ["powersync"]
powersync = ["dep:powersync"]
storage-pgwire = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
powersync = { workspace = true, optional = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
flicknote-auth = { path = "../flicknote-auth" }
dirs = { workspace = true }
chrono = "0.4"
uuid = { workspace = true }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "uuid", "chrono", "json", "macros"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
