[package]
name = "flicknote-sync"
version = "0.1.0"
edition = "2024"
description = "Background sync daemon for FlickNote CLI"
homepage = "https://github.com/guionai/flicknote-cli"
repository = "https://github.com/guionai/flicknote-cli"
license = "MIT"

[[bin]]
name = "flicknote-sync"
path = "src/main.rs"

[dependencies]
flicknote-core = { path = "../flicknote-core" }
flicknote-auth = { path = "../flicknote-auth" }
powersync = { workspace = true }
rusqlite = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "signal", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "charset", "http2", "rustls-tls", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
futures-lite = { workspace = true }
log = "0.4"
env_logger = "0.11"
libc = "0.2.182"
notify = "7"

[lints]
workspace = true
