[package]
name = "flicktask-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "flicktask"
path = "src/main.rs"

[features]
default = ["powersync"]
powersync = ["taskchampion/storage-powersync"]

[dependencies]
flicknote-core = { path = "../flicknote-core", default-features = false }
flicknote-auth = { path = "../flicknote-auth" }
taskchampion = { workspace = true }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
uuid = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
fractional_index = "2.0.2"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
